fixing ipad portrait styles and keeping buttons from jumping around on iphone when loading

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15,7 +15,7 @@ html,body{margin:0; padding:0;}
 body{background: #e2e2e2 url(../img/bg.jpg); font:100% sans-serif; color:#49494a; -webkit-text-size-adjust:100%;}
 a{color:#46a9ba;}
 h1{font-size:.875em; color:#077083; font-weight: bold; margin:.5em 0 .3em; height:2.3em; overflow: hidden;}
-h3{ text-align: center; color:#707070; text-shadow:0 1px 0 #fff; font-size:3em; font:100 italic 3em museo-slab-1,museo-slab-2,Georgia,serif; margin:0 0 40px;}/*nothing found */
+h3{ text-align: center; color:#707070; text-shadow:0 1px 0 #fff; font-size:3em; font:100 italic 3em museo-slab-1,museo-slab-2,Georgia,serif; margin:0 0 40px;clear:both;}
 
 	#loading{font-style: normal;
 		-webkit-animation: rotate 1s infinite linear;
@@ -25,21 +25,21 @@ h3{ text-align: center; color:#707070; text-shadow:0 1px 0 #fff; font-size:3em; 
 	}
 	
 p{margin:0;}
-#masthead{background:#595959; color:#dedbc1; padding:10px; font:100 italic 1em museo-slab-1,museo-slab-2,Georgia,serif;-webkit-box-shadow: 0 2px 0 #535353, 0 12px 0 #707070, 0 1px 0 #797979; box-shadow: 0 2px 0 #535353, 0 12px 0 #707070, 0 1px 0 #797979;}
-	#masthead div{width:890px; margin:0 auto; position: relative; overflow: hidden;}
-#branding{font:bold italic 300% museo-slab-1,museo-slab-2,Georgia,serif; float: left; text-shadow: 0 1px 0 #3a3a3a; color:#dedbc1;}
-#masthead p{width:250px;position: relative;float:left; left:30px; padding-left:20px; top:10px; border-left:1px solid #707070;}
-#masthead form{float:right;margin-top: 20px; position: relative;}
+#mh{background:#595959; color:#dedbc1; padding:10px; font:100 italic 1em museo-slab-1,museo-slab-2,Georgia,serif;-webkit-box-shadow: 0 2px 0 #535353, 0 12px 0 #707070, 0 1px 0 #797979; box-shadow: 0 2px 0 #535353, 0 12px 0 #707070, 0 1px 0 #797979;}
+	#mh div{width:890px; margin:0 auto; position: relative; overflow: hidden;}
+#b{font:bold italic 300% museo-slab-1,museo-slab-2,Georgia,serif; float: left; text-shadow: 0 1px 0 #3a3a3a; color:#dedbc1;}
+#mh p{width:250px;position: relative;float:left; left:30px; padding-left:20px; top:10px; border-left:1px solid #707070;}
+#mh form{float:right;margin-top: 20px; position: relative;}
 	::-webkit-input-placeholder { color: #8b8b8b;font-style: italic;}
 	:-moz-placeholder { color: #8b8b8b;font-style: italic;}
-	#search{width:200px; font-size:.875em; background: #ececec; -webkit-appearance: none; -webkit-border-radius:.8em; -moz-border-radius:.8em; border-radius:.8em; border:none; padding-left:10px; color:#49494a;}
-		#search:focus{outline:none;background: #fff;}
+	#s{width:200px; font-size:.875em; background: #ececec; -webkit-appearance: none; -webkit-border-radius:.8em; -moz-border-radius:.8em; border-radius:.8em; border:none; padding-left:10px; color:#49494a;}
+		#s:focus{outline:none;background: #fff;}
 	#m{position: absolute; right: 5px; top:50%; margin-top:-7px}
 #pl{position: relative; margin:20px auto; padding:0; width:890px;}
 
 .p{position:relative; text-align: center; width:220px; display: inline-block; vertical-align: top; margin:0; padding:20px 0;  border-bottom:1px solid #f7f5f5; border-top:1px solid #d4d3d3;}
 	
-.prod_wrap{border-right:1px solid #d4d3d3; border-left:1px solid #f7f5f5; padding:0 10px;}
+.pw{border-right:1px solid #d4d3d3; border-left:1px solid #f7f5f5; padding:0 10px;}
 
 figure{height:140px; display: table-cell; vertical-align: bottom; width:200px; line-height: 0;}
 
@@ -99,37 +99,36 @@ font-weight: bold; color:#252a32; border-left:1px solid #198b9f; float:left; pad
 			.dd a:hover{text-decoration: underline;}
 			.dd span{float:right;}
 			
-footer{text-align: center;font:.825em sans-serif; color:#a0a0a0; padding:0 0 20px;}
+footer{text-align: center;font:.825em sans-serif; color:#a0a0a0; padding:0 0 20px; clear:both;}
 	footer a{font-weight: bold;}
 
 @media(min-width:769px){
 	.p:nth-child(-n+4){border-top:none;}
 	.p:nth-last-child(-n+4){border-bottom: none;}
-	.p:nth-child(4n+1) .prod_wrap{border-left:none;}
-	.p:nth-child(4n+4) .prod_wrap{border-right:none;}
+	.p:nth-child(4n+1) .pw{border-left:none;}
+	.p:nth-child(4n+4) .pw{border-right:none;}
 }
 
 @media (max-width:768px){
 	h1{margin-top:0;}
 	h3{font-size:2em;}
-	#masthead{text-align: center;}
-		#masthead div{width:auto;}
-		#masthead p{display: none;}
-		#branding{float:none; font-size:2.2em;}
-		#masthead form{float: none; width:280px; margin:0 auto;}
-		#search{width:270px;  }
+	#mh{text-align: center;}
+		#mh div{width:auto;}
+		#mh p{display: none;}
+		#b{float:none; font-size:2.2em;}
+		#mh form{float: none; width:280px; margin:0 auto;}
+		#s{width:270px;  }
 	#pl{margin:12px 0 0; width:auto;}
 	.p{text-align: left; float:none;  width:92%; margin:0 4%; padding:10px 0; display: block; float:left;}
-		.prod_wrap{border-left:none; border-right:none; padding:0;}
-		.p header{margin-left:100px;}
+		.pw{border-left:none; border-right:none; padding:0;}
 		
-	figure{float:left; width:80px;   height: auto; margin:0 20px 0 0;}
+	figure{float:left; width:80px;   height: auto; min-height: 60px; margin:0 20px 0 0;}
 		figure img{max-width:100%; display: block;}
 	.dd{font-size:1em; line-height: 2; width:160px;}
 }
 @media (min-width:551px) and (max-width:768px) {
 	.p{float:left; width:46%; margin:0 2%; height:105px; }
-	#masthead div, #pl{width:auto;}
+	#mh div, #pl{width:auto; overflow: hidden; position: relative;}
 }
 @media (max-width:550px){
 	h1{height:auto;}
